# postgresql-embedded

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  release-plz.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  build.yml  checks.yml  ci.yml  clear-caches.yml  pr-benchmarks.yml  pr-labeler.yml  release-drafter.yml  release-plz.yml  scorecard.yml
examples/archive_async/: Cargo.toml
examples/archive_async/src/: main.rs
examples/archive_sync/: Cargo.toml
examples/archive_sync/src/: main.rs
examples/axum_embedded/: Cargo.toml
examples/axum_embedded/src/: main.rs
examples/diesel_embedded/: Cargo.toml  README.md  diesel.toml
examples/diesel_embedded/migrations/2024-08-17-200823_create_posts/: up.sql
examples/diesel_embedded/src/: main.rs
examples/download_progress_bar/: Cargo.toml
examples/download_progress_bar/src/: main.rs
examples/embedded_async/: Cargo.toml
examples/embedded_async/src/: main.rs
examples/embedded_async_diesel_r2d2/: Cargo.toml
examples/embedded_async_diesel_r2d2/migrations/2024-08-17-200823_create_posts/: up.sql
examples/embedded_async_diesel_r2d2/src/: main.rs  models.rs
examples/embedded_sync/: Cargo.toml
examples/embedded_sync/src/: main.rs
examples/portal_corp_extension/: Cargo.toml
examples/portal_corp_extension/src/: main.rs
examples/postgres_embedded/: Cargo.toml  README.md
examples/postgres_embedded/src/: main.rs
examples/sqlx_embedded/: Cargo.toml  README.md
examples/sqlx_embedded/src/: main.rs
examples/tensor_chord_extension/: Cargo.toml
examples/tensor_chord_extension/src/: main.rs
examples/unix_socket/: Cargo.toml
examples/unix_socket/src/: main.rs
examples/vector_extension/: Cargo.toml
examples/vector_extension/src/: main.rs
examples/zonky/: Cargo.toml
examples/zonky/src/: main.rs
postgresql_archive/: Cargo.toml  README.md
postgresql_archive/benches/: archive.rs
postgresql_archive/src/: archive.rs  blocking.rs  configuration.rs  error.rs  github.rs  hasher.rs  lib.rs  repository.rs  version.rs
postgresql_archive/src/blocking/: archive.rs  mod.rs
postgresql_archive/src/configuration/: mod.rs  theseus.rs  zonky.rs
postgresql_archive/src/configuration/custom/: matcher.rs  mod.rs
postgresql_archive/src/configuration/theseus/: extractor.rs  matcher.rs  mod.rs
postgresql_archive/src/configuration/zonky/: extractor.rs  matcher.rs  repository.rs
postgresql_archive/src/extractor/: mod.rs  model.rs  registry.rs  tar_gz_extractor.rs  tar_xz_extractor.rs  theseus_postgresql_binary.rs  zip_extractor.rs
postgresql_archive/src/hasher/: blake2b_512.rs  blake2s_256.rs  md5.rs  mod.rs  registry.rs  sha1.rs  sha2_256.rs  sha2_512.rs  sha3_256.rs  sha3_512.rs
postgresql_archive/src/matcher/: default.rs  mod.rs  postgresql_binaries.rs  registry.rs  target_os_arch.rs
postgresql_archive/src/repository/: github.rs  maven.rs  mod.rs  model.rs  registry.rs
postgresql_archive/src/repository/github/: mod.rs  models.rs  repository.rs
postgresql_archive/src/repository/maven/: models.rs  repository.rs
postgresql_archive/tests/: archive.rs  blocking.rs  zonky.rs
postgresql_commands/: Cargo.toml  README.md
postgresql_commands/src/: clusterdb.rs  createdb.rs  createuser.rs  dropdb.rs  dropuser.rs  ecpg.rs  error.rs  initdb.rs  lib.rs  oid2name.rs  pg_amcheck.rs  pg_archivecleanup.rs  pg_basebackup.rs  pg_checksums.rs  pg_config.rs  pg_controldata.rs  pg_ctl.rs  pg_dump.rs  pg_dumpall.rs  pg_isready.rs  pg_receivewal.rs  pg_recvlogical.rs  pg_resetwal.rs  pg_restore.rs  pg_rewind.rs  pg_test_fsync.rs  pg_test_timing.rs  pg_upgrade.rs  pg_verifybackup.rs  pg_waldump.rs  pgbench.rs  postgres.rs  psql.rs  reindexdb.rs  traits.rs  vacuumdb.rs  vacuumlo.rs
postgresql_embedded/: Cargo.toml  README.md
postgresql_embedded/benches/: embedded.rs
postgresql_embedded/src/: error.rs  lib.rs  postgresql.rs  settings.rs
postgresql_embedded/src/blocking/: mod.rs  postgresql.rs
postgresql_embedded/src/command/: clusterdb.rs  createdb.rs  createuser.rs  dropdb.rs  dropuser.rs  ecpg.rs  initdb.rs  mod.rs  oid2name.rs  pg_amcheck.rs  pg_archivecleanup.rs  pg_basebackup.rs  pg_checksums.rs  pg_config.rs  pg_controldata.rs  pg_ctl.rs  pg_dump.rs  pg_dumpall.rs  pg_isready.rs  pg_receivewal.rs  pg_recvlogical.rs  pg_resetwal.rs  pg_restore.rs  pg_rewind.rs  pg_test_fsync.rs  pg_test_timing.rs  pg_upgrade.rs  pg_verifybackup.rs  pg_waldump.rs  pgbench.rs  postgres.rs  psql.rs  reindexdb.rs  traits.rs  vacuumdb.rs  vacuumlo.rs
postgresql_embedded/tests/: blocking.rs  dump_command.rs  environment_variables.rs  postgresql.rs  start_config.rs  unix_socket.rs  zonky.rs
postgresql_extensions/: Cargo.toml  README.md
postgresql_extensions/src/: blocking.rs  error.rs  extensions.rs  lib.rs  matcher.rs  model.rs
postgresql_extensions/src/blocking/: extensions.rs  mod.rs
postgresql_extensions/src/repository/: mod.rs  model.rs  portal_corp.rs  registry.rs  steampipe.rs  tensor_chord.rs
postgresql_extensions/src/repository/portal_corp/: matcher.rs  mod.rs  repository.rs
postgresql_extensions/src/repository/steampipe/: extensions.rs  matcher.rs  mod.rs  repository.rs
postgresql_extensions/src/repository/tensor_chord/: matcher.rs  mod.rs  repository.rs
postgresql_extensions/tests/: blocking.rs  extensions.rs  portal_corp.rs  steampipe.rs
supply-chain/: config.toml
