[workspace]
default-members = [
    "postgresql_archive",
    "postgresql_commands",
    "postgresql_embedded",
    "postgresql_extensions",
]
members = [
    "examples/*",
    "postgresql_archive",
    "postgresql_commands",
    "postgresql_embedded",
    "postgresql_extensions",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["database"]
edition = "2024"
keywords = ["postgresql", "postgres", "embedded", "database", "server"]
license = "(Apache-2.0 OR MIT) AND PostgreSQL"
repository = "https://github.com/theseus-rs/postgresql-embedded"
rust-version = "1.89.0"
version = "0.19.0"

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
criterion = "0.7.0"
diesel = "2.2.12"
diesel_migrations = "2.2.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.0"
indoc = "2.0.6"
liblzma = "0.4.4"
md-5 = "0.10.6"
num-format = "0.4.4"
pgvector = "0.4.1"
postgres = "0.19.10"
quick-xml = "0.38.3"
r2d2_postgres = "0.18.2"
rand = "0.9.2"
regex-lite = "0.1.7"
reqwest = { version = "0.12.23", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.143"
sha1 = "0.10.6"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres"] }
tar = "0.4.44"
target-triple = "0.1.4"
tempfile = "3.21.0"
test-log = "0.2.18"
thiserror = "2.0.16"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-indicatif = "0.3.13"
tracing-subscriber = "0.3.20"
url = "2.5.7"
zip = { version = "4.5.0", default-features = false, features = ["deflate"] }

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"
