[workspace]
default-members = [
    "postgresql_archive",
    "postgresql_commands",
    "postgresql_embedded",
    "postgresql_extensions",
]
members = [
    "examples/*",
    "postgresql_archive",
    "postgresql_commands",
    "postgresql_embedded",
    "postgresql_extensions",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["database"]
edition = "2024"
keywords = ["postgresql", "postgres", "embedded", "database", "server"]
license = "(Apache-2.0 OR MIT) AND PostgreSQL"
repository = "https://github.com/theseus-rs/postgresql-embedded"
rust-version = "1.92.0"
version = "0.20.1"

[workspace.dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
axum = "0.8.8"
criterion = "0.8.2"
diesel = "2.3.6"
diesel_migrations = "2.3.1"
flate2 = "1.1.9"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.3"
indoc = "2.0.7"
liblzma = "0.4.5"
md-5 = "0.10.6"
num-format = "0.4.4"
pgvector = "0.4.1"
postgres = "0.19.12"
quick-xml = "0.39.0"
r2d2_postgres = "0.18.2"
rand = "0.10.0"
regex-lite = "0.1.9"
reqwest = { version = "0.13.2", default-features = false }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
reqwest-tracing = "0.7.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres"] }
tar = "0.4.44"
target-triple = "1.0.0"
tempfile = "3.24.0"
test-log = "0.2.19"
thiserror = "2.0.18"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.22"
url = "2.5.8"
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"
