[package]
authors.workspace = true
categories.workspace = true
description = "A library for downloading and extracting PostgreSQL archives"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "postgresql_archive"
repository = "https://github.com/theseus-rs/postgresql-embedded"
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
liblzma = { workspace = true }
md-5 = { workspace = true, optional = true }
num-format = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"], optional = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "stream"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
tar = { workspace = true }
target-triple = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, features = ["log"] }
tracing-indicatif = { workspace = true, optional = true }
url = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
hex = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }

[features]
default = [
    "native-tls",
    "theseus",
]
blocking = ["dep:tokio"]
github = [
    "dep:serde_json",
]
indicatif = [
    "dep:tracing-indicatif"
]
maven = [
    "dep:quick-xml",
    "md5",
    "sha1",
    "sha2",
]
md5 = ["dep:md-5"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls-native-roots"]
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
theseus = [
    "github",
    "sha2",
]
zonky = [
    "maven",
]

[package.metadata.docs.rs]
features = ["blocking"]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
harness = false
name = "archive"
