[package]
authors.workspace = true
categories.workspace = true
description = "PostgreSQL commands for interacting with a PostgreSQL server."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "postgresql_commands"
repository = "https://github.com/theseus-rs/postgresql-embedded"
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
test-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = []
tokio = ["dep:tokio"]
