[package]
authors.workspace = true
build = "build/build.rs"
categories.workspace = true
description = "Install and run a PostgreSQL database locally on Linux, MacOS or Windows. PostgreSQL can be bundled with your application, or downloaded on demand."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "postgresql_embedded"
repository = "https://github.com/theseus-rs/postgresql-embedded"
rust-version.workspace = true
version.workspace = true

[build-dependencies]
anyhow = { workspace = true }
postgresql_archive = { path = "../postgresql_archive", version = "0.20.4", default-features = false }
target-triple = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

[dependencies]
postgresql_archive = { path = "../postgresql_archive", version = "0.20.4", default-features = false }
postgresql_commands = { path = "../postgresql_commands", version = "0.20.4" }
rand = { workspace = true }
semver = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
target-triple = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = [
    "tls-native-tls",
    "theseus",
]
blocking = ["tokio"]
bundled = ["theseus"]
indicatif = [
    "postgresql_archive/indicatif",
]
tls-native-tls = [
    "postgresql_archive/tls-native-tls",
    "sqlx/tls-native-tls",
]
tls-rustls-aws-lc-rs = [
    "postgresql_archive/tls-rustls-aws-lc-rs",
    "sqlx/tls-rustls-aws-lc-rs",
]
tls-rustls-ring = [
    "postgresql_archive/tls-rustls-ring",
    "sqlx/tls-rustls-ring",
]
theseus = [
    "postgresql_archive/theseus",
]
tokio = [
    "dep:tokio",
    "postgresql_commands/tokio",
    "sqlx/runtime-tokio",
]
zonky = [
    "postgresql_archive/zonky",
]

[package.metadata.release]
dependent-version = "upgrade"

[package.metadata.docs.rs]
no-default-features = true
features = ["blocking", "theseus", "tokio"]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
harness = false
name = "embedded"
required-features = ["blocking"]
