[package]
authors.workspace = true
categories.workspace = true
description = "A library for managing PostgreSQL extensions"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "postgresql_extensions"
repository = "https://github.com/theseus-rs/postgresql-embedded"
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
postgresql_archive = { path = "../postgresql_archive", version = "0.21.0", default-features = false }
postgresql_commands = { path = "../postgresql_commands", version = "0.21.0", default-features = false }
regex-lite = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
target-triple = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
postgresql_embedded = { path = "../postgresql_embedded", version = "0.21.0" }
test-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = [
    "tls-native-tls",
    "portal-corp",
    "steampipe",
    "tensor-chord",
]
blocking = ["tokio"]
portal-corp = [
    "postgresql_archive/github",
    "postgresql_archive/zip",
]
steampipe = [
    "postgresql_archive/github",
    "postgresql_archive/tar-gz",
]
tensor-chord = [
    "postgresql_archive/github",
    "postgresql_archive/zip",
]
tokio = [
    "postgresql_commands/tokio",
    "dep:tokio"
]
tls-native-tls = [
    "postgresql_archive/tls-native-tls",
    "reqwest/native-tls",
]
tls-rustls-aws-lc-rs = [
    "postgresql_archive/tls-rustls-aws-lc-rs",
    "reqwest/rustls",
]
tls-rustls-ring = [
    "postgresql_archive/tls-rustls-ring",
    "reqwest/rustls-no-provider",
]

[package.metadata.cargo-machete]
ignored = ["reqwest"]
