[package]
edition.workspace = true
name = "diesel_embedded"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
diesel = { workspace = true, features = ["postgres", "r2d2"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
postgresql_embedded = { path = "../../postgresql_embedded" }
tokio = { workspace = true, features = ["full"] }
