[package]
edition.workspace = true
name = "download_progress_bar"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
indicatif = { workspace = true }
postgresql_embedded = { path = "../../postgresql_embedded", features = ["indicatif"] }
postgresql_extensions = { path = "../../postgresql_extensions" }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
