[package]
edition.workspace = true
name = "portal_corp_extension"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
indoc = { workspace = true }
pgvector = { workspace = true, features = ["sqlx"] }
postgresql_embedded = { path = "../../postgresql_embedded" }
postgresql_extensions = { path = "../../postgresql_extensions" }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
