[package]
edition.workspace = true
name = "sqlx_embedded"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
postgresql_embedded = { path = "../../postgresql_embedded" }
sqlx = { version = "0.7", default-features = true, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true }
