[package]
edition.workspace = true
name = "sqlx_embedded"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
postgresql_embedded = { path = "../../postgresql_embedded" }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tokio = { workspace = true, features = ["full"] }
