[package]
edition.workspace = true
name = "zonky"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
postgresql_archive = { path = "../../postgresql_archive" }
postgresql_embedded = { path = "../../postgresql_embedded" }
tokio = { workspace = true, features = ["full"] }
